--- a/index.html
+++ b/index.html
@@ -4,9 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello world!</title>
+    <title>Basic Portfolio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="./css/style.css" type="text/css" rel="stylesheet">
+    <link rel="icon" href="./images/am_icon.png" sizes="16x16">
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div class="navBarBg">
+        <div class="box">
+            <div class="container">
+                <header class="col-sm-12">
+                    <div class="title1">
+                        <div class="title2">
+                           <h1>Alex Mukha</h1>
+                        </div>
+                    </div>
+                    <nav id="nav" class="m-0 nav">
+                        <ul id="navul">
+                            <li class="liFirst"><a href="#">About Me</a></li>
+                            <li class="liFirst"><a href="./portfolio.html">Portfolio</a></li>
+                            <li class="liLast"><a href="./contact.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                </header>
+                <div class="spacer1">
+                </div>
+                <main>
+                    <div class="contenthead">
+                        <h1>About Me</h1>
+                    </div>
+                    <div class="contentbody">
+                        <img id="imgMain" src="./images/me.jpg" alt="My Animation">
+                        <p class="">
+                            I am a positive individual with a very curious personality. For some, working with computers is not
+                            always a fun task but for me it is an enjoyable activity, especially when I’m getting involved with
+                            something that leads me in the depth of the computer code, whether it is a simple HTML or something
+                            complex like C++. Recently I have enrolled myself in a coding bootcamp in order to fulfill my
+                            long-time desire to grasp the magic behind the mysterious lines of code consisting of many commands
+                            with lots of different brackets and other characters. I am very much enjoying attending classes and
+                            every time looking forward to attend another one.
+                        </p>
+                        <p>
+                            My other passion is cars. I always try to be on top of the new developments in the automobile
+                            industry especially with the way technology is progressing. I consider that a current decade is
+                            revolutionary in the vehicle adversity and that we have moved a giant leap in the technology that
+                            lets us enjoy the ability to enjoy our personal transportation. And the fact that automobiles are
+                            getting suited up with computers makes it that much more interesting for me personally.
+                        </p>
+                    </div>
+                    </main>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="bottom">
+        Copyright &copy;
+        </div>
+    </footer>
 </body>
 </html>
