--- a/index2.html
+++ b/index2.html
@@ -34,9 +34,9 @@
 			<hr>
 			
 			<section id="socialmedia">
-				<a href="https://github.com/alexmukha" target="_blank"><img src="assets/images/github.png" alt="link to github" width="50px" height="50px"></a>
-				<a href="https://www.linkedin.com/in/alex-mukha-922458175" target="_blank"><img src="assets/images/LinkedIn-Logo.png" alt="link to LinkedIn" width="50px" height="50px"></a>
-				<a href="https://stackoverflow.com/users/14816892" target="_blank"><img src="assets/images/stackoverflow_logo.png" alt="link to stackoverflow" width="50px" height="50px"></a>
+				<a href="https://github.com/alexmukha" target="_blank"><img src="https://github.githubassets.com/favicon.ico" alt="link to github" width="50px" height="50px"></a>
+				<a href="https://www.linkedin.com/in/alex-mukha-922458175" target="_blank"><img src="https://static.licdn.com/sc/h/eahiplrwoq61f4uan012ia17i" alt="link to LinkedIn" width="50px" height="50px"></a>
+				<a href="https://stackoverflow.com/users/14816892" target="_blank"><img src="https://cdn.sstatic.net/Sites/stackoverflow/img/apple-touch-icon.png" alt="link to stackoverflow" width="50px" height="50px"></a>
 			</section>
 
 		</section>
@@ -49,7 +49,7 @@
 			
 			<hr>
 
-			<img src="assets/images/nwe175.jpg" alt="Image of Nicole" id="bio-image">
+			<img src="assets/images/nwe175.jpg" alt="Alex Mukha animation" id="bio-image">
 
 			<p class="">
 				I am a positive individual with a very curious personality. For some, working with computers is not
