--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Basic Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link href="./css/style.css" type="text/css" rel="stylesheet">
+    <link href="./assets/css/style.css" type="text/css" rel="stylesheet">
     <link rel="icon" href="./images/am_icon.png" sizes="16x16">
 </head>
 <body>
