--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Basic Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link href="./assets/css/style.css" type="text/css" rel="stylesheet">
-    <link rel="icon" href="./images/am_icon.png" sizes="16x16">
+    <link href="./assets/CSS/style.css" type="text/css" rel="stylesheet">
+    <link rel="icon" href="./assets/Images/am_icon.png" sizes="16x16">
 </head>
 <body>
     <div class="navBarBg">
@@ -34,7 +34,7 @@
                         <h1>About Me</h1>
                     </div>
                     <div class="contentbody">
-                        <img id="imgMain" src="./images/me.jpg" alt="My Animation">
+                        <img id="imgMain" src="./assets/Images/me.jpg" alt="My Animation">
                         <p class="">
                             I am a positive individual with a very curious personality. For some, working with computers is not
                             always a fun task but for me it is an enjoyable activity, especially when I’m getting involved with
