--- a/index2.html
+++ b/index2.html
@@ -49,7 +49,7 @@
 			
 			<hr>
 
-			<img src="assets/images/nwe175.jpg" alt="Alex Mukha animation" id="bio-image">
+			<img src="assets/Images/me.jpg" alt="Alex Mukha animation" id="bio-image">
 
 			<p class="">
 				I am a positive individual with a very curious personality. For some, working with computers is not
