--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Basic Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link href="./assets/css/style.css" type="text/css" rel="stylesheet">
-    <link rel="icon" href="./assets/images/am_icon.png" sizes="16x16">
+    <link href="./assets/CSS/style.css" type="text/css" rel="stylesheet">
+    <link rel="icon" href="./assets/Images/am_icon.png" sizes="16x16">
 </head>
 <body>
     <div class="navBarBg">
