Add a header link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <header class="col-sm-12">
                     <div class="title1">
                         <div class="title2">
-                           <h1>Alex Mukha</h1>
+                            <h1><a href="#">Alex Mukha</a></h1>
                         </div>
                     </div>
                     <nav id="nav" class="m-0 nav">
