Update portfolio links

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                     <div class="row">
                         <div class="col-sm-9 col-sm-offset-1">
                             <div class="row row-space-2 margin-b-4">
+                                <a href="https://c-swizzle.github.io/Project-One" target="_blank">
                                 <div class="col-md-4 md-margin-b-4">
                                     <div class="service" data-height="height" style="height: 377px;">
                                         <div class="service-element">
@@ -103,17 +104,21 @@
                                         </div>   
                                     </div>
                                 </div>
+                                </a>
+                                <a href="https://alexmukha.github.io/WordGuessGame" target="_blank">
                                 <div class="col-md-4 md-margin-b-4">
                                     <div class="service bg-color-base wow zoomIn animated" data-height="height" data-wow-duration=".3" data-wow-delay=".1s" style="height: 377px; visibility: visible; animation-delay: 0.1s;">
                                         <div class="service-element">
                                             <i class="service-icon color-white icon-screen-tablet"></i>
                                         </div>
                                         <div class="service-info">
-                                            <h3 class="color-white">Crystal collector</h3>
-                                            <p class="color-white margin-b-5">JavaScript</p>
+                                            <h3 class="color-white">Word Guessing game</h3>
+                                            <p class="color-white margin-b-5">JavaScript, CSS</p>
                                         </div>   
                                     </div>
                                 </div>
+                                </a>
+                                <a href="https://alexmukha.github.io/GIF_Tastic" target="_blank">
                                 <div class="col-md-4">
                                     <div class="service" data-height="height" style="height: 377px;">
                                         <div class="service-element">
@@ -125,19 +130,23 @@
                                         </div>   
                                     </div>
                                 </div>
+                                </a>
                             </div>
                             <div class="row row-space-2 margin-b-4">
+                                    <a href="https://alexmukha.github.io/TriviaGame" target="_blank">
                                 <div class="col-md-4 md-margin-b-4">
-                                    <div class="service" data-height="height" style="height: 377px;">
+                                    <div class="service bg-color-base" data-height="height" style="height: 377px;">
                                         <div class="service-element">
                                             <i class="service-icon icon-chemistry"></i>
                                         </div>
                                         <div class="service-info">
-                                            <h3>Trivia Game</h3>
-                                            <p class="margin-b-5">JS, API</p>
+                                            <h3 class="color-white">Trivia Game</h3>
+                                            <p class="color-white margin-b-5">JS, API</p>
                                         </div>   
                                     </div>
                                 </div>
+                                </a>
+                                <a href="https://alexmukha.github.io/CrystalCollector" target="_blank">
                                 <div class="col-md-4 md-margin-b-4">
                                     <div class="service" data-height="height" style="height: 377px;">
                                         <div class="service-element">
@@ -149,17 +158,20 @@
                                         </div>  
                                     </div>
                                 </div>
+                                </a>
+                                <a href="https://alexmukha.github.io/TrainActivity" target="_blank">
                                 <div class="col-md-4">
-                                    <div class="service" data-height="height" style="height: 377px;">
+                                    <div class="service bg-color-base" data-height="height" style="height: 377px;">
                                         <div class="service-element">
                                             <i class="service-icon icon-badge"></i>
                                         </div>
                                         <div class="service-info">
-                                            <h3>Train Schedule</h3>
-                                            <p class="margin-b-5">Bootstrap, JS, Firebase</p>
+                                            <h3 class="color-white">Train Schedule</h3>
+                                            <p class="color-white margin-b-5">Bootstrap, JS, Firebase</p>
                                         </div>  
                                     </div>
                                 </div>
+                                </a>
                             </div>
                         </div>
                     </div>
