Update Contact section

--- a/index.html
+++ b/index.html
@@ -319,12 +319,12 @@
                                 <div class="form-group">
                                     <label for="exampleInputName1">Your name</label>
                                     <input type="text" class="form-control" id="exampleInputName1"
-                                        aria-describedby="nameHelp" placeholder="Enter your name" required>
+                                        aria-describedby="nameHelp" placeholder="Enter your name" required disabled="disabled">
                                 </div>
                                 <div class="form-group">
                                     <label for="exampleInputEmail1">Email address</label>
                                     <input type="email" class="form-control" id="exampleInputEmail1"
-                                        aria-describedby="emailHelp" placeholder="Enter your email" required>
+                                        aria-describedby="emailHelp" placeholder="Enter your email" required disabled="disabled">
                                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with
                                         anyone
                                         else.
@@ -333,10 +333,10 @@
                                 <div class="form-group">
                                     <label for="exampleFormControlTextarea1">Enter your message here</label>
                                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"
-                                        required></textarea>
+                                        required disabled="disabled"></textarea>
                                 </div>
-                                <button type="reset" class="btn btn-primary mr-2">Clear</button>
-                                <button type="submit" class="btn btn-primary">Submit</button>
+                                <button type="reset" class="btn btn-primary mr-2" disabled="disabled">Clear</button>
+                                <button type="submit" class="btn btn-primary" disabled="disabled">Submit</button>
                             </form>
                         </div>
                     </div>
