--- a/index.html
+++ b/index.html
@@ -48,12 +48,14 @@
                 <div class="col-sm-6">
                     <div class="promo-block-divider">
                         <h1 class="promo-block-title">Alex <br /> Mukha</h1>
-                        <p class="promo-block-text">Full Stack Web developer(in progress)</p>
+                        <p class="promo-block-text">Full Stack Web developer</p>
                     </div>
                     <ul class="list-inline">
-                        <li><a href="https://www.linkedin.com/in/alex-mukha-922458175/" target="_blank"><i
+                        <li><a href="https://www.linkedin.com/in/alex-mukha-922458175/" title="LinkedIn" target="_blank"><i
                                     class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a></li>
-                        <li><a href="https://github.com/alexmukha" target="_blank"><i class="fa fa-github fa-3x"
+                        <li><a href="https://github.com/alexmukha" title="GitHub" target="_blank"><i class="fa fa-github fa-3x"
+                                    aria-hidden="true"></i></a></li>
+                        <li><a href="http://credly.com/verify/12593b1" title="Certification" target="_blank"><i class="fas fa-file-certificate fa-3x"
                                     aria-hidden="true"></i></a></li>
 
                     </ul>
