--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 
@@ -11,13 +12,58 @@
     <link href="https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="./font/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <style>
-        .fa-3x {
-            padding-right: 15px;
-            cursor: pointer;
-            color: white;
-        }
-    </style>
+<style>
+.svg-inline--fa {
+  display: inline-block;
+  font-size: inherit;
+  height: 1em;
+  overflow: visible;
+  vertical-align: -0.125em;
+}
+.fa-1x {
+  font-size: 1em;
+}
+
+.fa-2x {
+  font-size: 2em;
+}
+
+.fa-3x {
+  padding-right: 15px;
+  cursor: pointer;
+  color: white;
+  font-size: 3em;
+}
+
+.fa-4x {
+  font-size: 4em;
+}
+
+.fa-5x {
+  font-size: 5em;
+}
+
+.fa-6x {
+  font-size: 6em;
+}
+
+.fa-7x {
+  font-size: 7em;
+}
+
+.fa-8x {
+  font-size: 8em;
+}
+
+.fa-9x {
+  font-size: 9em;
+}
+
+.fa-10x {
+  font-size: 10em;
+}
+
+</style>
     <link href="css/layout.min.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -48,13 +94,15 @@
                 <div class="col-sm-6">
                     <div class="promo-block-divider">
                         <h1 class="promo-block-title">Alex <br /> Mukha</h1>
-                        <p class="promo-block-text">Full Stack Web developer(in progress)</p>
+                        <p class="promo-block-text">Full Stack Web developer</p>
                     </div>
                     <ul class="list-inline">
-                        <li><a href="https://www.linkedin.com/in/alex-mukha-922458175/" target="_blank"><i
+                        <li><a href="https://www.linkedin.com/in/alexmukha/" title="LinkedIn" target="_blank"><i
                                     class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a></li>
-                        <li><a href="https://github.com/alexmukha" target="_blank"><i class="fa fa-github fa-3x"
+                        <li><a href="https://github.com/alexmukha" title="GitHub" target="_blank"><i class="fa fa-github fa-3x"
                                     aria-hidden="true"></i></a></li>
+                        <li><a href="http://credly.com/verify/12593b1" title="eCertificate" target="_blank"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="file-certificate" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-file-certificate fa-3x"><path fill="currentColor" d="M504.99 105.01l-97.9-98c-7.71-7.71-16-7-23.1-7v128h128c0-7.53.64-15.35-7-23zm-153 31V.01H152c-13.3 0-24 10.7-24 24V133c18.3-5 19.58-5 26.45-5 16.23 0 32.1 6.67 43.53 18.3 8.72 9.59 4.41 6.98 18.28 10.76 21.07 5.75 37.64 22.53 43.23 43.8 3.11 13.2.6 8.66 10.75 18.99 15.25 15.51 21.26 38.26 15.7 59.36-3.75 13.23-3.71 8.01 0 22.12 5.57 21.11-.45 43.85-15.69 59.37-9.64 9.36-7.04 4.88-10.75 18.99-4.89 18.59-18.16 33.75-35.5 41.12V512h263.99c13.3 0 24-10.7 24-24V160.01h-136c-13.2 0-24-10.8-24-24zM247.42 338.28c7.4-7.53 10.29-18.5 7.58-28.79-5.43-20.65-5.44-17.74 0-38.42 2.71-10.28-.18-21.26-7.58-28.79-14.86-15.12-13.43-12.61-18.87-33.27-2.71-10.28-10.6-18.32-20.71-21.07-20.28-5.53-17.84-4.1-32.69-19.21-7.4-7.53-18.18-10.47-28.28-7.71-20.32 5.54-17.46 5.53-37.75 0-10.1-2.76-20.88.19-28.28 7.71-14.91 15.18-12.5 13.7-32.69 19.21-10.11 2.76-18 10.79-20.71 21.07-5.46 20.74-4 18.13-18.87 33.27-7.4 7.53-10.29 18.5-7.58 28.79 5.45 20.71 5.42 17.79 0 38.41-2.71 10.28.18 21.26 7.58 28.79 14.85 15.11 13.43 12.61 18.87 33.27 2.71 10.28 10.6 18.32 20.71 21.07 14.31 3.9 11.52 2.97 15.84 5V512l64-32 64 32V397.62c4.31-2.02 1.52-1.1 15.84-5 10.11-2.76 18-10.79 20.71-21.07 5.47-20.74 4.01-18.13 18.88-33.27zM128 352.01c-35.34 0-64-28.65-64-64s28.66-64 64-64 64 28.65 64 64-28.66 64-64 64z" class=""></path>
+                            </svg></a></li>
 
                     </ul>
                 </div>
@@ -68,23 +116,22 @@
                     <div class="text-right sm-text-left">
                         <h2 class="margin-b-0">About me</h2>
                         <p></p>
-                        <div class="me"></div>
+                        <div id="me" class="mes" data-state="still" title="Animate Me 👋"></div>
                     </div>
                 </div>
                 <div class="col-sm-8 col-sm-offset-1">
                     <div class="margin-b-60">
                         <p>My name is Alex Mukha</p>
-                        <p>Althogh in the past I didn't have a career in coding, I was always fascinated by the power of
-                            syntax.</p>
-                        <p>Before this time I was concentrated on supporting my family and while i enjoyed the jobs
-                            along the way, I did not have an opportunity to reach for my real life dreams.</p>
+                        <p>Althogh in the past I didn't have a career in coding, I was always fascinated by the power of computer language coding syntax.<br>
+                        Before this time I was concentrated on supporting my family and while i enjoyed the jobs
+                            along the way, I did not have an opportunity to reach for the real dreams in my life.</p>
                         <p>In the past I've tried to educate myself in a World Wide Web environment and that's where I
-                            became familiar with languages like HTML, PHP, some JavaScript and even MySQL.</p>
-                        <p>Last year I found out about this wonderful coding bootcamp and decided not to miss the
-                            opportunity this time around. Currently I am very excited to attend clasess at UC Davis
-                            Extensions.</p>
-                        <p><a href="#portfolio">Below</a> you will find a few of my projects that I was able to
-                            accomplish with regards of attending recent coding classes.</p>
+                            became familiar with languages like HTML, PHP, MySQL and some JavaScript.</p>
+                        <p>In 2018 I found out about this wonderful coding bootcamp at UC Davis of Continuing and Professional Education and decided not to miss the
+                            opportunity this time around. Currently I am very excited to announce that I successfully and with excellenece completed my education at UC Davis of Continuing and Professional Education.</p>
+                        <p class="js_nav-item"><a class="nav-item-child nav-item-hover"
+                            href="#portfolio">Below you will find a few of my projects that I was able to
+                            accomplish with regards of attending recent coding classes.</a></p>
                     </div>
                 </div>
             </div>
@@ -319,12 +366,12 @@
                                 <div class="form-group">
                                     <label for="exampleInputName1">Your name</label>
                                     <input type="text" class="form-control" id="exampleInputName1"
-                                        aria-describedby="nameHelp" placeholder="Enter your name" required>
+                                        aria-describedby="nameHelp" placeholder="Enter your name" required disabled="disabled">
                                 </div>
                                 <div class="form-group">
                                     <label for="exampleInputEmail1">Email address</label>
                                     <input type="email" class="form-control" id="exampleInputEmail1"
-                                        aria-describedby="emailHelp" placeholder="Enter your email" required>
+                                        aria-describedby="emailHelp" placeholder="Enter your email" required disabled="disabled">
                                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with
                                         anyone
                                         else.
@@ -333,11 +380,11 @@
                                 <div class="form-group">
                                     <label for="exampleFormControlTextarea1">Enter your message here</label>
                                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"
-                                        required></textarea>
+                                        required disabled="disabled"></textarea>
                                 </div>
-                                <button type="reset" class="btn btn-primary mr-2">Clear</button>
-                                <button type="submit" class="btn btn-primary">Submit</button>
-                            </form>
+                                <button type="reset" class="btn btn-primary mr-2" disabled="disabled">Clear</button>
+                                <button type="submit" class="btn btn-primary" disabled="disabled">Submit</button>
+                            </form><br><br><br><br><br>
                         </div>
                     </div>
                 </div>
@@ -348,7 +395,6 @@
     <script src="vendor/jquery.min.js" type="text/javascript"></script>
     <script src="vendor/jquery-migrate.min.js" type="text/javascript"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="js/layout.min.js" type="text/javascript"></script>
+    <script src="js/layout.min.js" type="text/javascript"></script>    
 </body>
-
 </html>
