--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@
 <!--ONESTAT SCRIPTCODE START-->
 <!--
 // Modification of this code is not allowed and will permanently disable your account!
-// Account ID : 622297
-// Website URL: https://alexmukha.github.io
+// Account ID : 622311
+// Website URL: https://alexmukha.github.io/
 // Copyright (C) 2002-2007 OneStat.com All Rights Reserved
 -->
 <div id="OneStatTag"><table border='0' cellpadding='0' cellspacing='0'><tr><td align='center'>
@@ -403,7 +403,7 @@
     function OneStat_Pageview()
     {
         var d=document;
-        var sid="622297";
+        var sid="622311";
         var CONTENTSECTION="";
         var osp_URL=d.URL;
         var osp_Title=d.title;
@@ -428,9 +428,51 @@
     //-->
     </script>
     <noscript>
-    <a href="http://www.onestatfree.com"><img border="0" src="http://stat.onestat.com/stat.aspx?tagver=2&amp;sid=622297&amp;js=No&amp;" ALT="free site counter"></a>
+    <a href="http://www.onestatfree.com"><img border="0" src="http://stat.onestat.com/stat.aspx?tagver=2&amp;sid=622311&amp;js=No&amp;" ALT="web traffic analysis"></a>
     </noscript>
-    </td></tr><tr><td align='center'><div style="COLOR:black;display:none;FONT-FAMILY:'Verdana';"><a href="http://www.onestat.com" style="text-decoration:none;">free site counter</a><br></div></td></tr></table></div>
+    </td></tr><tr><td align='center'><div style="COLOR:black;display:none;FONT-FAMILY:'Verdana';"><a href="http://www.onestat.com" style="text-decoration:none;">web traffic analysis</a><br></div></td></tr></table></div>
+    <!--ONESTAT SCRIPTCODE END--><!--ONESTAT SCRIPTCODE START-->
+<!--
+// Modification of this code is not allowed and will permanently disable your account!
+// Account ID : 622311
+// Website URL: https://alexmukha.github.io/
+// Copyright (C) 2002-2007 OneStat.com All Rights Reserved
+-->
+<div id="OneStatTag"><table border='0' cellpadding='0' cellspacing='0'><tr><td align='center'>
+    <script type="text/javascript">
+    <!--
+    function OneStat_Pageview()
+    {
+        var d=document;
+        var sid="622311";
+        var CONTENTSECTION="";
+        var osp_URL=d.URL;
+        var osp_Title=d.title;
+        var t=new Date();
+        var p="http"+(d.URL.indexOf('https:')==0?'s':'')+"://stat.onestat.com/stat.aspx?tagver=2&sid="+sid;
+        p+="&url="+escape(osp_URL);
+        p+="&ti="+escape(osp_Title);
+        p+="&section="+escape(CONTENTSECTION);
+        p+="&rf="+escape(parent==self?document.referrer:top.document.referrer);
+        p+="&tz="+escape(t.getTimezoneOffset());
+        p+="&ch="+escape(t.getHours());
+        p+="&js=1";
+        p+="&ul="+escape(navigator.appName=="Netscape"?navigator.language:navigator.userLanguage);
+        if(typeof(screen)=="object"){
+           p+="&sr="+screen.width+"x"+screen.height;p+="&cd="+screen.colorDepth;
+           p+="&jo="+(navigator.javaEnabled()?"Yes":"No");
+        }
+        d.write('<a href="http://www.onestatfree.com/aspx/login.aspx?sid='+sid+'" target=_blank><img id="ONESTAT_TAG" border="0" src="'+p+'" alt="This site tracked by OneStatFree.com. Get your own free site tracker."></'+'a>');
+    }
+    
+    OneStat_Pageview();
+    //-->
+    </script>
+    <noscript>
+    <a href="http://www.onestatfree.com"><img border="0" src="http://stat.onestat.com/stat.aspx?tagver=2&amp;sid=622311&amp;js=No&amp;" ALT="web traffic analysis"></a>
+    </noscript>
+    </td></tr><tr><td align='center'><div style="COLOR:black;display:none;FONT-FAMILY:'Verdana';"><a href="http://www.onestat.com" style="text-decoration:none;">web traffic analysis</a><br></div></td></tr></table></div>
+    <!--ONESTAT SCRIPTCODE END-->
     </div>
     <script src="vendor/jquery.min.js" type="text/javascript"></script>
     <script src="vendor/jquery-migrate.min.js" type="text/javascript"></script>
