Update project links

--- a/index.html
+++ b/index.html
@@ -9,14 +9,8 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="" name="description" />
     <meta content="" name="author" />
-    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144720985-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-144720985-1');
-    </script>
+    <script src="js/secondary.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="./font/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -166,13 +160,13 @@
                                                     <h3>Word Guessing game</h3>
                                                     <h6>JS, CSS</h6>
                                                     <div class="icon col-sm-6">
-                                                        <a href="https://github.com/alexmukha/WordGuessGame" target="_blank"
+                                                            <a href="Portfolio/wordguessinggame/code.html" target="_blank"
                                                             title="GitHub source code">
                                                             <i class="fa fa-github fa-4x" aria-hidden="true"></i>
                                                         </a>
                                                     </div>
                                                     <div class="icon col-sm-6">
-                                                        <a href="https://alexmukha.github.io/WordGuessGame" target="_blank"
+                                                            <a href="Portfolio/wordguessinggame/live.html" target="_blank"
                                                             title="Live demo">
                                                             <i class="fa fa-code fa-4x" aria-hidden="true"></i>
                                                         </a>
@@ -189,13 +183,13 @@
                                         <h3>Travel Group Project</h3>
                                         <h6>CSS, JS, APIs</h6>
                                         <div class="icon col-sm-6">
-                                                <a href="https://github.com/C-Swizzle/Project-One" target="_blank"
+                                                <a href="Portfolio/travelgroupproject/code.html" target="_blank"
                                                     title="GitHub source code">
                                                     <i class="fa fa-github fa-4x" aria-hidden="true"></i>
                                                 </a>
                                             </div>
                                             <div class="icon col-sm-6">
-                                                <a href="https://c-swizzle.github.io/Project-One" target="_blank"
+                                                <a href="Portfolio/travelgroupproject/live.html" target="_blank"
                                                     title="Live demo">
                                                     <i class="fa fa-code fa-4x" aria-hidden="true"></i>
                                                 </a>
