--- a/Portfolio/wordguessinggame/live.html
+++ b/Portfolio/wordguessinggame/live.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta content="index" name="WordGuessLive" />
     <title>Word Guessing Game</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144720985-1"></script>
     <script src="js/secondary.js"></script>
