--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="" name="description" />
     <meta content="" name="author" />
+    <meta content="index" name="location" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144720985-1"></script>
-    <script src="js/secondary.js"></script>
+    <script src="./js/secondary.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="./font/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -160,13 +161,13 @@
                                                     <h3>Word Guessing game</h3>
                                                     <h6>JS, CSS</h6>
                                                     <div class="icon col-sm-6">
-                                                            <a href="Portfolio/wordguessinggame/code.html" target="_blank"
+                                                            <a href="./Portfolio/wordguessinggame/code.html" target="_blank"
                                                             title="GitHub source code">
                                                             <i class="fa fa-github fa-4x" aria-hidden="true"></i>
                                                         </a>
                                                     </div>
                                                     <div class="icon col-sm-6">
-                                                            <a href="Portfolio/wordguessinggame/live.html" target="_blank"
+                                                            <a href="./Portfolio/wordguessinggame/live.html" target="_blank"
                                                             title="Live demo">
                                                             <i class="fa fa-code fa-4x" aria-hidden="true"></i>
                                                         </a>
@@ -183,13 +184,13 @@
                                         <h3>Travel Group Project</h3>
                                         <h6>CSS, JS, APIs</h6>
                                         <div class="icon col-sm-6">
-                                                <a href="Portfolio/travelgroupproject/code.html" target="_blank"
+                                                <a href="./Portfolio/travelgroupproject/code.html" target="_blank"
                                                     title="GitHub source code">
                                                     <i class="fa fa-github fa-4x" aria-hidden="true"></i>
                                                 </a>
                                             </div>
                                             <div class="icon col-sm-6">
-                                                <a href="Portfolio/travelgroupproject/live.html" target="_blank"
+                                                <a href="./Portfolio/travelgroupproject/live.html" target="_blank"
                                                     title="Live demo">
                                                     <i class="fa fa-code fa-4x" aria-hidden="true"></i>
                                                 </a>
