Update Travel Group Project link

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                                 </a>
                                             </div>
                                             <div class="icon col-sm-6">
-                                                <a href="./Portfolio/travelgroupproject/live.html" target="_blank"
+                                                <a href="https://c-swizzle.github.io/Project-One/" target="_blank"
                                                     title="Live demo">
                                                     <i class="fa fa-code fa-4x" aria-hidden="true"></i>
                                                 </a>
