Update Live button icons

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                                                     <div class="icon col-sm-6">
                                                             <a href="./Portfolio/wordguessinggame/live.html" target="_blank"
                                                             title="Live demo">
-                                                            <i class="fa fa-code fa-4x" aria-hidden="true"></i>
+                                                            <i class="fa fa-caret-right fa-4x" aria-hidden="true"></i>
                                                         </a>
                                                     </div>
                                                 </div>
@@ -192,7 +192,7 @@
                                             <div class="icon col-sm-6">
                                                 <a href="https://c-swizzle.github.io/Project-One/" target="_blank"
                                                     title="Live demo">
-                                                    <i class="fa fa-code fa-4x" aria-hidden="true"></i>
+                                                    <i class="fa fa-caret-right fa-4x" aria-hidden="true"></i>
                                                 </a>
                                             </div>
     
@@ -213,7 +213,7 @@
                                             <div class="icon col-sm-6">
                                                 <a href="https://alexmukha.github.io/GIF_Tastic" target="_blank"
                                                     title="Live demo">
-                                                    <i class="fa fa-code fa-4x" aria-hidden="true"></i>
+                                                    <i class="fa fa-caret-right fa-4x" aria-hidden="true"></i>
                                                 </a>
                                             </div>
                                         </div>
@@ -235,7 +235,7 @@
                                             <div class="icon col-sm-6">
                                                 <a href="https://alexmukha.github.io/TriviaGame" target="_blank"
                                                     title="Live demo">
-                                                    <i class="fa fa-code fa-4x" aria-hidden="true"></i>
+                                                    <i class="fa fa-caret-right fa-4x" aria-hidden="true"></i>
                                                 </a>
                                             </div>
                                         </div>
@@ -255,7 +255,7 @@
                                             <div class="icon col-sm-6">
                                                 <a href="https://alexmukha.github.io/CrystalCollector" target="_blank"
                                                     title="Live demo">
-                                                    <i class="fa fa-code fa-4x" aria-hidden="true"></i>
+                                                    <i class="fa fa-caret-right fa-4x" aria-hidden="true"></i>
                                                 </a>
                                             </div>
                                         </div>
@@ -275,7 +275,7 @@
                                             <div class="icon col-sm-6">
                                                 <a href="https://alexmukha.github.io/TrainActivity" target="_blank"
                                                     title="Live demo">
-                                                    <i class="fa fa-code fa-4x" aria-hidden="true"></i>
+                                                    <i class="fa fa-caret-right fa-4x" aria-hidden="true"></i>
                                                 </a>
                                             </div>
                                         </div>
@@ -297,7 +297,7 @@
                                             <div class="icon col-sm-6">
                                                 <a href="https://my-crypto-project.herokuapp.com/" target="_blank"
                                                     title="Live demo">
-                                                    <i class="fa fa-code fa-4x" aria-hidden="true"></i>
+                                                    <i class="fa fa-caret-right fa-4x" aria-hidden="true"></i>
                                                 </a>
                                             </div>
                                         </div>
@@ -317,7 +317,7 @@
                                         <div class="icon col-sm-6">
                                             <a href="https://worldnews-mynotes.herokuapp.com/" target="_blank"
                                                 title="Live demo">
-                                                <i class="fa fa-code fa-4x" aria-hidden="true"></i>
+                                                <i class="fa fa-caret-right fa-4x" aria-hidden="true"></i>
                                             </a>
                                         </div>
 
@@ -339,7 +339,7 @@
                                             <div class="icon col-sm-6">
                                                 <a href="https://da-am-burger.herokuapp.com/" target="_blank"
                                                     title="Live demo">
-                                                    <i class="fa fa-code fa-4x" aria-hidden="true"></i>
+                                                    <i class="fa fa-caret-right fa-4x" aria-hidden="true"></i>
                                                 </a>
                                             </div>
                                         </div>
